# navigation2_dynamic

./: .gitignore  README.md
detectron2_detector/: README.md  package.xml  setup.cfg  setup.py
detectron2_detector/config/: detectron2.yaml
detectron2_detector/detectron2_detector/: detectron2_node.py  utils.py
detectron2_detector/launch/: detectron.launch.py
kf_hungarian_tracker/: README.md  package.xml  setup.cfg  setup.py
kf_hungarian_tracker/config/: kf_hungarian.yaml
kf_hungarian_tracker/kf_hungarian_tracker/: kf_hungarian_node.py  obstacle_class.py
kf_hungarian_tracker/launch/: kf_hungarian.launch.py
nav2_dynamic_msgs/: CMakeLists.txt  package.xml
nav2_dynamic_msgs/msg/: Obstacle.msg  ObstacleArray.msg
